force-app/main/default/objects/Booking__c/fields/Accounts_Verified__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accounts Verified</label>
    <type>Checkbox</type>
</CustomField>