force-app/main/default/objects/Booking__c/fields/Advance_maintenance_24_months_GST_18__c.field-meta.xml
<CustomField>
    <fullName>Advance_maintenance_24_months_GST_18__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Advance maintenance 24 months + GST (18%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>