force-app/main/default/objects/Booking__c/fields/All_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>All_Applicant_Name__c</fullName>
    <label>All Applicant Name</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>