force-app/main/default/objects/Booking__c/fields/All_Inclusive_Amount__c.field-meta.xml
<CustomField>
    <fullName>All_Inclusive_Amount__c</fullName>
    <formula>Quotation__r.Charge_Bucket_1_Amount__c + Quotation__r.Charge_Bucket_2_Amount__c + Quotation__r.Charge_Bucket_3_Amount__c + Quotation__r.Charge_Bucket_1_Total_GST__c + Quotation__r.Charge_Bucket_2_Total_GST__c + Quotation__r.Charge_Bucket_3_Total_GST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Inclusive Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>