force-app/main/default/objects/Booking__c/fields/Amount_Sanctioned__c.field-meta.xml
<CustomField>
    <fullName>Amount_Sanctioned__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount Sanctioned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>