force-app/main/default/objects/Booking__c/fields/Applicant_Address__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Address__c</fullName>
    <label>Applicant Address</label>
    <type>TextArea</type>
</CustomField>