force-app/main/default/objects/Booking__c/fields/Assign_to_MIS__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_MIS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign to MIS</label>
    <type>Checkbox</type>
</CustomField>