force-app/main/default/objects/Booking__c/fields/Booking_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_Approval_Status__c</fullName>
    <label>Booking Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Booking_Approval_Status</valueSetName>
    </valueSet>
</CustomField>