force-app/main/default/objects/Booking__c/fields/Booking_Approver__c.field-meta.xml
<CustomField>
    <fullName>Booking_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This Approver is used after booking creation and before the welcome call</inlineHelpText>
    <label>Sales Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings4</relationshipName>
    <type>Lookup</type>
</CustomField>