force-app/main/default/objects/Booking__c/fields/Booking_Cancellation_Approver__c.field-meta.xml
<CustomField>
    <fullName>Booking_Cancellation_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Cancellation Approver(Level 1)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Booking</relationshipName>
    <type>Lookup</type>
</CustomField>