force-app/main/default/objects/Booking__c/fields/Booking_Cancellation_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_Cancellation_Status__c</fullName>
    <label>Booking Cancellation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Booking_Cancellation_Status</valueSetName>
    </valueSet>
</CustomField>