force-app/main/default/objects/Booking__c/fields/Booking_Registered__c.field-meta.xml
<CustomField>
    <fullName>Booking_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking Registered</label>
    <type>Checkbox</type>
</CustomField>