force-app/main/default/objects/Booking__c/fields/Booking_Stage__c.field-meta.xml
<CustomField>
    <fullName>Booking_Stage__c</fullName>
    <label>Booking Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Booking_Stage</valueSetName>
    </valueSet>
</CustomField>