force-app/main/default/objects/Booking__c/fields/Booking_Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Booking_Sub_stage__c</fullName>
    <label>Booking Sub-stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amount Collected</fullName>
            </value>
            <value>
                <fullName>Amount Cleared</fullName>
            </value>
            <value>
                <fullName>Cibil Approved</fullName>
            </value>
            <value>
                <fullName>Welcome Call Done</fullName>
            </value>
            <value>
                <fullName>Booking Approved</fullName>
            </value>
            <value>
                <fullName>Booking Unapproved</fullName>
            </value>
            <value>
                <fullName>Cheque Bounce</fullName>
            </value>
            <value>
                <fullName>Cibil Unapproved</fullName>
            </value>
            <value>
                <fullName>Booking Cancelled</fullName>
            </value>
            <value>
                <fullName>Booking Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>