force-app/main/default/objects/Booking__c/fields/By_Pass_Registration_Done__c.field-meta.xml
<CustomField>
    <fullName>By_Pass_Registration_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>By Pass Registration Done</label>
    <type>Checkbox</type>
</CustomField>