force-app/main/default/objects/Booking__c/fields/Calculated_Amount_Based_on_RTP__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Amount_Based_on_RTP__c</fullName>
    <formula>Agreement_Value__c *  Receipt_Amount_Threshold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Amount Based on RTP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>