force-app/main/default/objects/Booking__c/fields/Calculated_Amount_of_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Amount_of_Receipt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Calculated Amount of Receipt %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>