force-app/main/default/objects/Booking__c/fields/Cancellation_Type__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Type__c</fullName>
    <label>Cancellation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cancellation_Type</valueSetName>
    </valueSet>
</CustomField>