force-app/main/default/objects/Booking__c/fields/Conversation_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Conversation_End_Date_Time__c</fullName>
    <formula>Conversation_Start_Date_Time__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversation End Date/Time</label>
    <type>DateTime</type>
</CustomField>