force-app/main/default/objects/Booking__c/fields/CP_Incentive__c.field-meta.xml
<CustomField>
    <fullName>CP_Incentive__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CP Incentive</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>