force-app/main/default/objects/Booking__c/fields/CP_Project__c.field-meta.xml
<CustomField>
    <fullName>CP_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Project</label>
    <referenceTo>CP_Project__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>