force-app/main/default/objects/Booking__c/fields/CRM_Call_Count__c.field-meta.xml
<CustomField>
    <fullName>CRM_Call_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CRM Call Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>