force-app/main/default/objects/Booking__c/fields/CRM_Comment_History__c.field-meta.xml
<CustomField>
    <fullName>CRM_Comment_History__c</fullName>
    <label>CRM Comment History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>