force-app/main/default/objects/Booking__c/fields/CRM_Next_follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>CRM_Next_follow_up_Date__c</fullName>
    <label>CRM Next follow up Date</label>
    <type>DateTime</type>
</CustomField>