force-app/main/default/objects/Booking__c/fields/Customer_Reward_Point__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reward_Point__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Customer Reward Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>