force-app/main/default/objects/Booking__c/fields/Deviation__c.field-meta.xml
<CustomField>
    <fullName>Deviation__c</fullName>
    <formula>IF(
  Market_Value__c &gt; Agreement_Value__c, 
  IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red Flag&quot;), 
  IF(
    Market_Value__c &lt; Agreement_Value__c, 
    IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green Flag&quot;), 
    IF(
      Market_Value__c == Agreement_Value__c, 
      IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Orange Flag&quot;), 
      null
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deviation</label>
    <type>Text</type>
</CustomField>