force-app/main/default/objects/Booking__c/fields/Error_Body__c.field-meta.xml
<CustomField>
    <fullName>Error_Body__c</fullName>
    <label>Error Body</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>