force-app/main/default/objects/Booking__c/fields/Generate_Welcome_Call_Checklist_Master__c.field-meta.xml
<CustomField>
    <fullName>Generate_Welcome_Call_Checklist_Master__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Welcome Call Checklist Master</label>
    <type>Checkbox</type>
</CustomField>