force-app/main/default/objects/Booking__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <defaultValue>5</defaultValue>
    <label>GST(%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>