force-app/main/default/objects/Booking__c/fields/Is_5_Recevied__c.field-meta.xml
<CustomField>
    <fullName>Is_5_Recevied__c</fullName>
    <formula>Total_AV_Receipts__c  &gt;=  Calculated_Amount_Based_on_RTP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It is checked if Agreement Value is Greator or equals to Total AV Receipt * Receipt Amount Threshold</inlineHelpText>
    <label>Is 5% Recevied</label>
    <type>Checkbox</type>
</CustomField>