force-app/main/default/objects/Booking__c/fields/Is_NOC_Upload__c.field-meta.xml
<CustomField>
    <fullName>Is_NOC_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is NOC Upload</label>
    <type>Checkbox</type>
</CustomField>