force-app/main/default/objects/Booking__c/fields/Is_Sanctioned_Letter_Upload__c.field-meta.xml
<CustomField>
    <fullName>Is_Sanctioned_Letter_Upload__c</fullName>
    <formula>ISPICKVAL( Loan_Status__c , &quot;Loan Sanctioned&quot;)</formula>
    <inlineHelpText>It is used for when my Loan Sanctioned Letter is Uploaded</inlineHelpText>
    <label>Is Sanctioned Letter Upload</label>
    <type>Checkbox</type>
</CustomField>