force-app/main/default/objects/Booking__c/fields/Is_Signed_Booking_form_Upload__c.field-meta.xml
<CustomField>
    <fullName>Is_Signed_Booking_form_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Signed Booking form Upload</label>
    <type>Checkbox</type>
</CustomField>