force-app/main/default/objects/Booking__c/fields/isResale__c.field-meta.xml
<CustomField>
    <fullName>isResale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isResale</label>
    <type>Checkbox</type>
</CustomField>