force-app/main/default/objects/Booking__c/fields/Last_CRM_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_CRM_Call_Date__c</fullName>
    <label>Last CRM Call Date</label>
    <type>Date</type>
</CustomField>