force-app/main/default/objects/Booking__c/fields/Last_CRM_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_CRM_Call_Status__c</fullName>
    <label>Last CRM Call Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>