force-app/main/default/objects/Booking__c/fields/Last_CRM_Comment__c.field-meta.xml
<CustomField>
    <fullName>Last_CRM_Comment__c</fullName>
    <label>Last CRM Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>