force-app/main/default/objects/Booking__c/fields/Legal_Charges__c.field-meta.xml
<CustomField>
    <fullName>Legal_Charges__c</fullName>
    <label>Legal Charges</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>