force-app/main/default/objects/Booking__c/fields/Level_2_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Approval_Status__c</fullName>
    <label>Level 2 Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Booking_Approval_Status</valueSetName>
    </valueSet>
</CustomField>