force-app/main/default/objects/Booking__c/fields/Loan_Sanction_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Sanction_Status__c</fullName>
    <formula>TEXT(Mode_of_Funding__c)</formula>
    <label>Loan Sanction Status</label>
    <type>Text</type>
</CustomField>