force-app/main/default/objects/Booking__c/fields/Mode_of_Funding__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Funding__c</fullName>
    <label>Mode of Funding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Self Funding</fullName>
            </value>
            <value>
                <fullName>Partial Funding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>