force-app/main/default/objects/Booking__c/fields/NOC_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>NOC_Issue_Date__c</fullName>
    <label>NOC Issue Date</label>
    <type>Date</type>
</CustomField>