force-app/main/default/objects/Booking__c/fields/Other_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Other_Incentive__c</fullName>
    <label>Other Incentive</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>