force-app/main/default/objects/Booking__c/fields/Payment_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Payment_Scheme__c</fullName>
    <formula>Quotation__r.Payment_Scheme__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Scheme</label>
    <type>Text</type>
</CustomField>