force-app/main/default/objects/Booking__c/fields/Photographs_6_copy__c.field-meta.xml
<CustomField>
    <fullName>Photographs_6_copy__c</fullName>
    <label>Photographs 6 copy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>