force-app/main/default/objects/Booking__c/fields/Possession_Status__c.field-meta.xml
<CustomField>
    <fullName>Possession_Status__c</fullName>
    <label>Possession Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under construction</fullName>
            </value>
            <value>
                <fullName>Sent for FM approval</fullName>
            </value>
            <value>
                <fullName>Rejected by FM</fullName>
            </value>
            <value>
                <fullName>Sent for CRM Head approval</fullName>
            </value>
            <value>
                <fullName>Rejected by CRM Head</fullName>
            </value>
            <value>
                <fullName>Physical handover pending</fullName>
            </value>
            <value>
                <fullName>Possession Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>