force-app/main/default/objects/Booking__c/fields/Preferred_Bank_for_Home_loan__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Bank_for_Home_loan__c</fullName>
    <label>Preferred Bank for Home loan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>