force-app/main/default/objects/Booking__c/fields/Primary_Applicant_Title__c.field-meta.xml
<CustomField>
    <fullName>Primary_Applicant_Title__c</fullName>
    <label>Primary Applicant Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>