force-app/main/default/objects/Booking__c/fields/Receipt_Amount_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Amount_Threshold__c</fullName>
    <defaultValue>5/100</defaultValue>
    <label>Receipt Amount Threshold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>