force-app/main/default/objects/Booking__c/fields/Registratio_Date__c.field-meta.xml
<CustomField>
    <fullName>Registratio_Date__c</fullName>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>