force-app/main/default/objects/Booking__c/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <defaultValue>Today()+10</defaultValue>
    <label>Tentative Registration Date</label>
    <type>Date</type>
</CustomField>