force-app/main/default/objects/Booking__c/fields/Registration_Tax__c.field-meta.xml
<CustomField>
    <fullName>Registration_Tax__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Registration Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>