force-app/main/default/objects/Booking__c/fields/RM_Possession_Checklist__c.field-meta.xml
<CustomField>
    <fullName>RM_Possession_Checklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RM Possession Checklist</label>
    <type>Checkbox</type>
</CustomField>