force-app/main/default/objects/Booking__c/fields/ROC_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>ROC_Issue_Date__c</fullName>
    <label>ROC Issue Date</label>
    <type>Date</type>
</CustomField>